--- a/wx.html
+++ b/wx.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html manifest="demo.manifest"><head>
+<head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <meta charset="utf-8">
     <title>Holmbeck airfield weather</title>
