--- a/wx.html
+++ b/wx.html
@@ -58,7 +58,7 @@
 			</tr>
 		</tbody>
 	</table>
-	<small>guages are powered by <a href="http://harmoniccode.blogspot.com">steelseries</a></small>
+	<small>gauges are powered by <a href="http://harmoniccode.blogspot.com">steelseries</a></small>
 
 <script>
     var rTempH,
