--- a/wxgraphs.html
+++ b/wxgraphs.html
@@ -47,7 +47,7 @@
 			<tr>
 				<td width="100%">
 					<button onclick="setRange()">refresh</button>
-					<button onclick="location.href='http://www.mmcpix.com/wx.html'">show real-time guages</button><br>
+					<button onclick="location.href='http://www.mmcpix.com/wx.html'">show real-time gauges</button><br>
 					<p>last update: <span id="lastText">  </span></p>
 					<!-- <p>reply:       <span id="replyText"> </span></p> <!-- -->
 				</td>
